--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 }
 .movie-title span {
   display: block;
-  color: #c7c7c7;
+  color: #818181;
 }
 
 .movie-level {
@@ -200,8 +200,8 @@
   background-color: rgba(221, 54, 43, 0.8);
 }
 .showing-list .state.hottest {
-  background-color: #F3C833;
-  background-color: rgba(243, 200, 51, 0.8);
+  background-color: #FCC900;
+  background-color: rgba(252, 201, 0, 0.8);
 }
 
 .onlinebook .select-box {
@@ -223,17 +223,14 @@
 .onlinebook .select-box select {
   width: 100%;
   height: 60px;
-  border-radius: 5px;
-  padding: 0 15px;
   background-color: transparent;
   color: #fff;
-  border: 1px solid #c7c7c7;
   margin-left: 10px;
 }
 .onlinebook .select-box select option {
   background-color: #191919;
   color: #fff;
-  border: 1px solid #c7c7c7;
+  border: 1px solid #818181;
 }
 @media all and (max-width: 768px) {
   .onlinebook .select-box {
