--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,10 +1,14 @@
-@use "variables" as v;
+@use "variables"as v;
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-*{box-sizing: border-box;}
-:root{
-  --swiper-theme-color:#fff!important;
+* {
+  box-sizing: border-box;
 }
+
+:root {
+  --swiper-theme-color: #fff !important;
+}
+
 body,
 html {
   -webkit-text-size-adjust: 100%;
@@ -121,7 +125,10 @@ textarea {
   margin: 0;
   /* 2 */
 }
-input[type='text'],input[type='password'],input[type='number']{
+
+input[type='text'],
+input[type='password'],
+input[type='number'] {
   width: 100%;
   height: 40px;
   padding: 0 10px;
@@ -129,6 +136,7 @@ input[type='text'],input[type='password'],input[type='number']{
   border: 1px solid v.$font-secondary;
   background: #EBEBEB;
 }
+
 /* The container */
 .container-checkbox {
   display: block;
@@ -140,30 +148,34 @@ input[type='text'],input[type='password'],input[type='number']{
   -ms-user-select: none;
   user-select: none;
 }
+
 .container-checkbox input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
 }
+
 .container-checkbox .checkmark {
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 0;
   height: 16px;
   width: 16px;
   border-radius: 3px;
   background-color: #ccc;
 }
-.container-checkbox input:checked ~ .checkmark {
+
+.container-checkbox input:checked~.checkmark {
   background-color: v.$primary;
 }
+
 .container-checkbox .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
-.container-checkbox input:checked ~ .checkmark:after {
+.container-checkbox input:checked~.checkmark:after {
   display: block;
 }
 
@@ -178,10 +190,13 @@ input[type='text'],input[type='password'],input[type='number']{
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 select {
-  -moz-appearance:none; /* Firefox */
-  -webkit-appearance:none; /* Safari and Chrome */
-  appearance:none;
+  -moz-appearance: none;
+  /* Firefox */
+  -webkit-appearance: none;
+  /* Safari and Chrome */
+  appearance: none;
   background: transparent;
   background-image: url('data:image/svg+xml;utf8,<svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.3315 0.284188C11.5154 0.102129 11.7637 0 12.0224 0C12.2812 0 12.5295 0.102129 12.7134 0.284188C12.8041 0.373589 12.8762 0.480154 12.9255 0.597679C12.9747 0.715204 13 0.841342 13 0.968754C13 1.09617 12.9747 1.2223 12.9255 1.33983C12.8762 1.45735 12.8041 1.56392 12.7134 1.65332L7.19163 7.06485C7.00734 7.24666 6.75888 7.34859 6.5 7.34859C6.24112 7.34859 5.99266 7.24666 5.80837 7.06485L0.286631 1.65332C0.195851 1.56392 0.123758 1.45735 0.0745498 1.33983C0.0253414 1.2223 0 1.09617 0 0.968754C0 0.841342 0.0253414 0.715204 0.0745498 0.597679C0.123758 0.480154 0.195851 0.373589 0.286631 0.284188C0.470502 0.102129 0.718801 0 0.977555 0C1.23631 0 1.48461 0.102129 1.66848 0.284188L6.50212 4.72221L11.3315 0.284188Z" fill="white"/></svg>');
   background-repeat: no-repeat;
@@ -349,7 +364,7 @@ nav {
   top: 0;
   left: 0;
   padding: 70px 0;
-  transition: all 0.5s;
+  // transition: all 0.5s;
   z-index: 5;
 
   &.mini {
@@ -392,7 +407,7 @@ nav {
   }
 
   .input-toggler {
-    & ~ .sidebar .menu {
+    &~.sidebar .menu {
       @include v.pad-width {
         position: absolute;
         top: 0;
@@ -412,7 +427,7 @@ nav {
       }
     }
 
-    & ~ .sidebar-overlay {
+    &~.sidebar-overlay {
       position: absolute;
       background-color: #000;
       width: 100%;
@@ -425,27 +440,27 @@ nav {
     }
 
     &:checked {
-      & ~ .menu-toggler .menu-toggler-line {
+      &~.menu-toggler .menu-toggler-line {
         top: 5px;
         transform: translateY(100px);
         transform: rotate(45deg);
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(2) {
+      &~.menu-toggler .menu-toggler-line:nth-child(2) {
         display: none;
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(3) {
+      &~.menu-toggler .menu-toggler-line:nth-child(3) {
         top: -5px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
 
-      & ~ .sidebar .menu {
+      &~.sidebar .menu {
         left: 0;
       }
 
-      & ~ .sidebar-overlay {
+      &~.sidebar-overlay {
         display: block;
         opacity: 0.9;
       }
@@ -454,23 +469,21 @@ nav {
 }
 
 .sidebar {
-  // max-width: 1200px;
   display: flex;
-  // justify-content: space-between;
   align-items: center;
   padding: 0 10px;
   margin: 0 auto;
 
   .forpc {
-    width: calc(100% - 278px);
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 
     @include v.pad-width {
       display: none;
     }
 
     @include v.other-width {
-      width: calc(100% - 348px);
-
     }
 
 
@@ -492,17 +505,22 @@ nav {
   }
 
   .menu {
-    transition: all 0.35s ease-out;
+    // transition: all 0.35s ease-out;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 1;
+    flex-grow: 1;
 
-    > li {
-      display: inline-block;
-      width: 12%;
+
+    >li {
+      width: 15%;
       text-align: center;
       position: relative;
 
       @include v.other-width {
-        width: 17%;
+        width: 18%;
       }
 
       &:hover {
@@ -570,12 +588,10 @@ nav {
     cursor: pointer;
     border: 1px solid v.$primary;
     border-radius: 25px;
-    position: absolute;
-    right: 30px;
-    top: 77px;
     z-index: 2;
-    background-color: transparent;
-    transition: background-color 0.4s ease;
+    position: relative;
+    flex-shrink: 0;
+
 
     @include v.pad-width {
       display: none;
@@ -589,13 +605,15 @@ nav {
       display: inline-block;
 
       &.user {
-        padding: 0.5em .8em;
+        padding: 0.8em 1.2em;
         border-radius: 22px;
         color: v.$font-primary;
         display: none;
+
         .user-name {
           display: inline-flex;
-          max-width: 100px;
+          max-width: 80px;
+          width: 80px;
           overflow: hidden;
           white-space: nowrap;
           text-overflow: clip;
@@ -606,9 +624,7 @@ nav {
       &.user-login {
         display: inline-block;
 
-        a {
-          padding: 10px 25px;
-        }
+       
       }
 
       &.user-regist {
@@ -616,12 +632,13 @@ nav {
 
         a {
           background-color: transparent;
+          padding: 10px 20px 10px 10px;
         }
       }
 
       a {
         display: inline-block;
-        padding: 10px 15px 10px 10px;
+        padding: 10px 25px;
         background-color: v.$primary;
         border-radius: 22px;
       }
@@ -635,8 +652,8 @@ nav {
         transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
 
         hr {
-          width: 80%;
-          margin: 0 auto 10px auto;
+          width: 85%;
+          margin: 30px auto 20px auto;
           transform: scaleX(0);
           transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1);
         }
@@ -649,6 +666,25 @@ nav {
           transform: translate(0px, -5px);
           transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
             opacity 0.6s ease;
+          padding:0 0 15px 0;
+
+          &::before {
+            content: "";
+            display: inline-block;
+            width: 8px;
+            height: 8px;
+            margin-right: 5px;
+          }
+
+          &:hover {
+            &::before {
+              border-radius: 100%;
+              margin-right: 5px;
+              margin-bottom: 3px;
+              background-color: v.$blue-bg-color;
+            }
+          }
+
         }
       }
     }
@@ -656,12 +692,11 @@ nav {
     &.-active {
       background-color: v.$primary;
       transition-delay: 0.2s;
-
       .account-sub {
-        height: 150px;
+        height:190px;
         transition-delay: 0.1s;
 
-        hr {
+        hr { 
           transform: scaleX(1);
           transform-origin: left;
           transition-delay: 0.3s;
@@ -689,7 +724,7 @@ nav {
     &.-leave {
       background-color: transparent;
       transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
-
+      
       .account-sub {
         transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
         height: 0;
@@ -725,9 +760,15 @@ nav {
       background-color: v.$primary;
       border: none;
 
- 
+
       .account-sub {
+        position: absolute;
+        top: 25px;
         display: block;
+        z-index: -2;
+        background-color: v.$primary;
+        border-bottom-left-radius: 22px;
+        border-bottom-right-radius: 22px;
       }
 
       .user {
@@ -736,7 +777,7 @@ nav {
 
       .user-login,
       .user-regist {
-        display: none; 
+        display: none;
       }
 
       &:hover {
@@ -757,8 +798,10 @@ nav {
 
     div {
       margin: 0;
+
       &:nth-of-type(1) {
         @extend %weight300;
+
         &::before {
           content: "";
           display: inline-block;
@@ -770,6 +813,7 @@ nav {
           margin-bottom: 2px;
         }
       }
+
       &:nth-of-type(2) {
         color: v.$primary;
         margin-left: 10px;
@@ -792,7 +836,6 @@ nav {
     color: v.$font-primary;
     max-width: v.$max-width;
     margin: 50px auto 50px auto;
-    padding: 0 30px;
 
     &:last-of-type {
       margin-bottom: 150px;
@@ -884,7 +927,7 @@ footer {
   background-color: #0f0f0f;
   color: v.$font-primary;
 
-  & > div {
+  &>div {
     max-width: v.$max-width;
     margin: 0 auto;
     display: flex;
@@ -922,10 +965,12 @@ footer {
       text-align: center;
       margin-bottom: 10px;
       margin-right: 5px;
+
       img {
         width: 25px;
         height: 25px;
         margin-top: 7px;
+
         &.ig {
           width: 20px;
           height: 20px;
@@ -963,43 +1008,51 @@ footer {
 .modal-content {
   position: fixed;
   top: 10%;
-  width: 550px;
-  max-width: 550px;
+  width: 570px;
+  max-width: 570px;
   height: fit-content;
   border-radius: 10px;
   color: black;
   background: #EBEBEB;
-  p{
+
+  p {
     background-color: v.$yellow-bg-color;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding:10px 10px 10px 20px;
-    @extend %weight600; 
+    padding: 10px 10px 10px 20px;
+    @extend %weight600;
   }
-  label{
+
+  label {
     display: block;
     margin-bottom: 3px;
-    @extend %weight600; 
+    @extend %weight600;
   }
-  .modal-info{
-    padding:20px 4vw;
-    .info:not(:last-of-type){
+
+  .modal-info {
+    padding: 25px 4vw;
+
+    .info:not(:last-of-type) {
       margin-bottom: 15px;
-      .forgetpwd{
+
+      .forgetpwd {
         font-size: .5em;
         color: v.$font-secondary;
         @extend %weight300;
         letter-spacing: 0px;
       }
-      .lockpwd{
+
+      .lockpwd {
         @extend %weight300;
         margin-top: 5px;
       }
     }
-    .submmitbtn{
+
+    .submmitbtn {
       text-align: center;
       margin-top: 80px;
-      button{
+
+      button {
         width: 100%;
         padding: 10px 0;
         background-color: #006EBD;
@@ -1008,11 +1061,15 @@ footer {
         border: 1px solid #125578;
         border-radius: 5px;
       }
-      a{color: v.$primary;}
+
+      a {
+        color: v.$primary;
+      }
     }
   }
 
 }
+
 /*closing*/
 .close-modal {
   position: absolute;
@@ -1024,30 +1081,39 @@ footer {
   font-size: 1.7em;
 }
 
-#login{
-  .nobr{
-      display: inline-block;
-      @extend %weight400;
+#login {
+  .nobr {
+    display: inline-block;
+    @extend %weight400;
+  }
+
+  label[for="loginpassword"] {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .material-icons {
+      font-size: 15px;
     }
-    label[for="loginpassword"]{
+  }
+
+  .safeverify {
+    >div {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      .material-icons{
-        font-size: 15px;
+
+      input {
+        width: 50%;
+        max-width: 50%;
       }
-    }
-    .safeverify{
-      >div{
+
+      .imgsafe {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-        input{width: 50%;max-width: 50%;}
-        .imgsafe{    
-          display: flex;
-          align-items: flex-end;
-        a{
+        align-items: flex-end;
+
+        a {
           background-color: v.$bg-color;
           width: 30px;
           height: 30px;
@@ -1055,22 +1121,48 @@ footer {
           border-radius: 100%;
           margin-left: 5px;
 
-          .material-icons{
+          .material-icons {
             font-size: 16px;
           }
 
         }
-        }
       }
     }
+  }
 
 }
-#regist{
-  label[for="confirmrule"]{
+
+#regist {
+  label[for="confirmrule"] {
     @extend %weight300;
   }
-  .required-icon{
+
+  .required-icon {
     color: v.$primary;
+  }
+}
+
+.gotop{
+  color: v.$font-primary;
+  width:50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border:1px solid v.$font-primary;
+  border-radius: 100%;
+  background-color: v.$secondary;
+  position: fixed;
+  bottom: 160px;
+  right: 40px;
+  cursor: pointer;
+  visibility: hidden;
+  z-index: 1;
+  transition: all 0.4s;
+  opacity: 0;
+  &.show{
+    visibility: visible;
+    opacity: 1;
   }
 }
 
@@ -1087,9 +1179,11 @@ footer {
 .s-font {
   font-size: 0.9rem;
 }
+
 .xs-font {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
+
 .l-font {
   font-size: 1.3rem;
 }
@@ -1105,6 +1199,7 @@ footer {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
+
 .mul-ellipsis-3 {
   overflow: hidden;
   text-overflow: ellipsis;
