--- a/css/all.css
+++ b/css/all.css
@@ -1,30 +1,13 @@
-.movie-title span, .movie-item .up-date, .movie-item .list-item > div span, .introduction {
+.movie-item .up-date, .movie-item .list-item > div span, .introduction {
   font-weight: 300;
 }
 
-.movie-level, .showing-list .state, .movie-item .book-btn {
+.showing-list .state, .movie-item .book-btn {
   font-weight: 400;
 }
 
-.movie-item .list-item > div {
+.movie-item .list-item > div, .booking-history .ticket-no {
   font-weight: 600;
-}
-
-.movie-title {
-  margin-top: 15px;
-  font-weight: bold;
-  width: 100%;
-}
-.movie-title span {
-  display: block;
-  color: #818181;
-}
-
-.movie-level {
-  margin: 15px 0;
-  padding: 2px 10px;
-  display: inline-block;
-  color: #000;
 }
 
 #landing {
@@ -174,9 +157,7 @@
   text-align: center;
   margin-bottom: 20px;
   position: relative;
-}
-.showing-list a > div {
-  padding-right: 10px;
+  padding: 0 5px;
 }
 @media all and (max-width: 320px) {
   .showing-list a > div {
@@ -270,8 +251,8 @@
   height: fit-content;
 }
 .lastestnew .news-box .new-info {
-  max-width: 60%;
-  width: 60%;
+  max-width: 50%;
+  width: 50%;
   margin-left: 20px;
   padding-right: 15px;
   text-align: left;
@@ -299,7 +280,7 @@
 }
 
 .movie-item:first-of-type {
-  margin-right: 50px;
+  padding-right: 40px;
 }
 @media all and (max-width: 768px) {
   .movie-item:first-of-type {
@@ -359,6 +340,61 @@
   .trailer {
     padding: 10px;
   }
+}
+
+.booking-history {
+  border-top: 1px solid #818181;
+  padding: 40px 20px 0 20px;
+  margin-bottom: 40px;
+}
+.booking-history .row-left img {
+  width: 90%;
+}
+.booking-history .row-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding-left: 20px;
+}
+.booking-history .ticket-no {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #73C044;
+  padding: 5px 15px;
+}
+.booking-history .ticket-no span {
+  margin-left: 5px;
+}
+.booking-history .movie-title p {
+  color: #00ABF2;
+  line-height: 1.3;
+}
+.booking-history .movie-title span {
+  color: #fff;
+}
+.booking-history .booking-list .list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5px;
+}
+.booking-history .booking-list .list:last-of-type {
+  margin-bottom: 0;
+}
+.booking-history .booking-list .list label {
+  width: 90px;
+  min-width: 90px;
+  color: #818181;
 }
 
 @-webkit-keyframes rotate {
