--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,25 +1,4 @@
-@use "variables" as v;
-
-//share
-.movie-title {
-  margin-top: 15px;
-  font-weight: bold;
-  width: 100%;
-
-  span {
-    @extend %weight300;
-    display: block;
-    color: v.$font-secondary;
-  }
-}
-
-.movie-level {
-  margin: 15px 0;
-  padding: 2px 10px;
-  display: inline-block;
-  color: v.$secondary;
-  @extend %weight400;
-}
+@use "variables"as v;
 
 //landing for index
 #landing {
@@ -119,7 +98,7 @@
         top: 13px;
         left: 14px;
         animation: scroll 1.3s ease-in infinite;
-        
+
         @include v.pad-width {
           left: 12px;
         }
@@ -161,11 +140,10 @@
   text-align: center;
   margin-bottom: 20px;
   position: relative;
-  
+  padding: 0 5px;
 
   a {
-    > div {
-      padding-right: 10px;
+    >div {
       @include v.mini-width {
         padding-right: 0;
       }
@@ -214,7 +192,12 @@
       align-items: center;
       margin-bottom: 30px;
     }
-    .material-icons{color: v.$primary;font-size: 30px;}
+
+    .material-icons {
+      color: v.$primary;
+      font-size: 30px;
+    }
+
     select {
       width: 100%;
       height: 60px;
@@ -238,6 +221,7 @@
 .lastestnew {
   .news-box {
     width: 100%;
+
     a {
       width: 100%;
       position: relative;
@@ -248,13 +232,15 @@
         flex-direction: column;
       }
     }
+
     img {
       width: 40%;
       height: fit-content;
     }
+
     .new-info {
-      max-width: 60%;
-      width: 60%;
+      max-width: 50%;
+      width: 50%;
       margin-left: 20px;
       padding-right: 15px;
       text-align: left;
@@ -286,7 +272,7 @@
 
 .movie-item {
   &:first-of-type {
-    margin-right: 50px;
+    padding-right: 40px;
 
     @include v.phone-width {
       margin-right: 0;
@@ -317,24 +303,25 @@
     color: v.$font-primary;
     cursor: pointer;
     @extend %weight400;
-    .material-icons{
+
+    .material-icons {
       margin-right: 10px;
     }
   }
 
   .list-item {
-    > div {
+    >div {
       margin-bottom: 10px;
       @extend %weight600;
 
-      
+
       span {
         @extend %weight300;
         border-left: 1px solid #fff;
         padding-left: 10px;
         margin-left: 10px;
       }
-    } 
+    }
 
     .list-2 {
       width: 100%;
@@ -346,7 +333,8 @@
     }
   }
 }
-.introduction{
+
+.introduction {
   line-height: 1.8;
   @extend %weight300;
 }
@@ -359,6 +347,67 @@
 
   @include v.phone-width {
     padding: 10px;
+  }
+}
+
+.booking-history {
+  border-top: 1px solid v.$font-secondary;
+  padding:40px 20px 0 20px;
+  margin-bottom: 40px;
+  .row-left {
+    img {
+      width: 90%;
+    }
+  }
+
+  .row-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    padding-left: 20px;
+  }
+
+  .ticket-no {
+    width: fit-content;
+    background-color: v.$green-bg-color;
+    padding: 5px 15px;
+
+    span {
+      margin-left: 5px
+    }
+
+    @extend %weight600;
+  }
+
+  .movie-title {
+    p {
+      color: v.$blue-bg-color;
+      line-height: 1.3;
+    }
+
+    span {
+      color: v.$font-primary;
+    }
+
+  }
+
+  .booking-list {
+    
+    .list {
+      display: flex;
+      margin-bottom: 5px;
+
+      &:last-of-type{
+        margin-bottom: 0;
+      }
+      label {
+        width: 90px;
+        min-width: 90px;
+        color: v.$font-secondary;
+      }
+     
+    }
   }
 }
 
@@ -384,4 +433,3 @@
     opacity: 0.3;
   }
 }
-
