--- a/scss/global.scss
+++ b/scss/global.scss
@@ -483,8 +483,7 @@ nav {
       display: none;
     }
 
-    @include v.other-width {
-    }
+    @include v.other-width {}
 
 
     @include v.phone-width {
@@ -624,7 +623,7 @@ nav {
       &.user-login {
         display: inline-block;
 
-       
+
       }
 
       &.user-regist {
@@ -666,7 +665,7 @@ nav {
           transform: translate(0px, -5px);
           transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
             opacity 0.6s ease;
-          padding:0 0 15px 0;
+          padding: 0 0 15px 0;
 
           &::before {
             content: "";
@@ -692,11 +691,12 @@ nav {
     &.-active {
       background-color: v.$primary;
       transition-delay: 0.2s;
+
       .account-sub {
-        height:190px;
+        height: 190px;
         transition-delay: 0.1s;
 
-        hr { 
+        hr {
           transform: scaleX(1);
           transform-origin: left;
           transition-delay: 0.3s;
@@ -724,7 +724,7 @@ nav {
     &.-leave {
       background-color: transparent;
       transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
-      
+
       .account-sub {
         transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
         height: 0;
@@ -793,7 +793,10 @@ nav {
 
 /* share style */
 .section-box {
+  padding: 0 15px;
+
   .main-title {
+    width: 100%;
     margin-bottom: 30px;
 
     div {
@@ -829,7 +832,28 @@ nav {
       content: "|";
       position: relative;
       top: -2px;
+      margin-left: 10px;
     }
+  }
+
+  .movie-title {
+    margin-top: 15px;
+    font-weight: bold;
+    width: 100%;
+
+    span {
+      @extend %weight300;
+      display: block;
+      color: v.$font-secondary;
+    }
+  }
+
+  .movie-level {
+    margin: 15px 0;
+    padding: 2px 10px;
+    display: inline-block;
+    color: v.$secondary;
+    @extend %weight400;
   }
 
   .section {
@@ -841,15 +865,6 @@ nav {
       margin-bottom: 150px;
     }
 
-    @include v.pad-width {
-      padding: 0 15px;
-    }
-
-    @include v.phone-width {
-      padding: 0 15px;
-      margin-top: 30px;
-    }
-
     .content {
       margin: 30px 0;
     }
@@ -858,67 +873,95 @@ nav {
       display: flex;
       flex-wrap: wrap;
 
+      .row-1 {
+        @include v.row-width(10%);
+
+        @include v.pad-width {
+          flex-basis: 50%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
+      }
+
       .row-2 {
-        flex-basis: 50%;
-        width: 50%;
+        @include v.row-width(20%);
 
         @include v.pad-width {
-          flex-basis: 100%;
-          width: 100%;
+          flex: 0 0 33.33%;
+          width: 33.33%;
         }
 
         @include v.phone-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-2-1 {
-        flex-basis: 25%;
-
-        @include v.pad-width {
-          flex-basis: 50%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-        }
-      }
-
-      .row-2-9 {
-        flex-basis: 70%;
-        width: 70%;
-
-        @include v.pad-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 100%;
-          width: 100%;
-        }
-      }
-
-      .row-5 {
-        flex-basis: 20%;
-        width: 20%;
-
-        @include v.pad-width {
-          flex-basis: 25%;
-          width: 25%;
-        }
-
-        @include v.phone-width {
-          flex-basis: 50%;
+          flex: 50%;
           width: 50%;
         }
 
         @include v.mini-width {
+          flex: 100%;
+          width: 100%;
+        }
+      }
+
+      .row-3 {
+        @include v.row-width(30%);
+
+        @include v.pad-width {
+          flex-basis: 50%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
+      }
+
+      .row-4 {
+        @include v.row-width(40%);
+      }
+
+      .row-7 {
+        @include v.row-width(70%);
+
+        @include v.pad-width {
+          flex-basis: 100%;
+          width: 100%;
+        }
+
+        @include v.phone-width {
           flex-basis: 100%;
           width: 100%;
         }
       }
+
+      .row-6 {
+        @include v.row-width(60%);
+      }
+
+      .row-5 {
+        @include v.row-width(50%);
+
+        @include v.pad-width {
+          flex: 100%;
+          width: 100%;
+        }
+
+        @include v.phone-width {
+          flex: 100%;
+          width: 100%;
+        }
+
+
+      }
+
+      .row-8 {
+        @include v.row-width(80%);
+      }
+
+      .row-9 {
+        @include v.row-width(90%);
+      }
+
     }
   }
 }
@@ -967,21 +1010,15 @@ footer {
       margin-right: 5px;
 
       img {
-        width: 25px;
-        height: 25px;
-        margin-top: 7px;
-
-        &.ig {
-          width: 20px;
-          height: 20px;
-        }
+        width: 20px;
+        height: 20px;
+        margin-top: 10px;
       }
     }
   }
 }
 
 /*modal*/
-/*ok actual modal now*/
 .modal {
   visibility: hidden;
   z-index: 20;
@@ -1142,16 +1179,15 @@ footer {
   }
 }
 
-.gotop{
+.gotop {
   color: v.$font-primary;
-  width:50px;
+  width: 50px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border:1px solid v.$font-primary;
+  border: 1px solid v.$font-primary;
   border-radius: 100%;
-  background-color: v.$secondary;
   position: fixed;
   bottom: 160px;
   right: 40px;
@@ -1160,7 +1196,9 @@ footer {
   z-index: 1;
   transition: all 0.4s;
   opacity: 0;
-  &.show{
+  @include v.bg-opacity(v.$secondary, 0.5);
+
+  &.show {
     visibility: visible;
     opacity: 1;
   }
